--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>Enter your text here:</p>
   <textarea id="originalText" rows="7"></textarea>
   <br>
-  <p>Words to scramble <b>(separated by commas):</b></p>
+  <p>Words/letters to scramble <b>(separated by commas):</b></p>
   <input type="text" id="scrambleWords">
   <br>
   <button onclick="redactText()">Redact Now</button>
